--- a/Index/Asset & Environment Modeling.css
+++ b/Index/Asset & Environment Modeling.css
@@ -22,6 +22,13 @@
   font-style: normal;
 }
 
+/*Milchella Font*/
+@font-face {
+    font-family: "Milchella";
+    src: url(Asset\Fonts\Milchella-Regular.ttf) format("ttf");
+}
+
+
 /* General Reset */
 * {
   margin: 0;
@@ -92,14 +99,14 @@ body {
 
 /* LOGO (Desktop: Left) */
 .logo {
-    font-family: 'romie', sans-serif;
+    font-family: 'Milchella', sans-serif;
     font-weight: 900;
     letter-spacing: 0.5cap;
-    font-size: 18px;
+    font-size: 22px;
     color: #333;;
     text-transform: uppercase;
     position: absolute;
-    left: 40px;
+    left: 50px;
 }
 
 /* NAV LINKS (Desktop: Right) */
@@ -153,7 +160,7 @@ body {
 
     .logo {
         position: absolute;
-        left: 55%; /* Center horizontally */
+        left: 50%; /* Center horizontally */
         transform: translateX(-50%); /* Ensure perfect centering */
         top: 15px; /* Adjust vertical alignment if needed */
         z-index: 5;
