--- a/Index/Index-style.css
+++ b/Index/Index-style.css
@@ -16,7 +16,7 @@
 /*Milchella Font*/
 @font-face {
   font-family: "Milchella";
-  src: url(Asset\Fonts\Milchella-Regular.ttf) format("ttf");
+  src: url("Asset/Fonts/Milchella-Regular.ttf") format("truetype");
 }
 
   
