--- a/Index/Marketing Collateral.css
+++ b/Index/Marketing Collateral.css
@@ -22,10 +22,10 @@
   font-style: normal;
 }
 
-/*Milchella Font*/
+/* Milchella Font */
 @font-face {
     font-family: "Milchella";
-    src: url(Asset\Fonts\Milchella-Regular.ttf) format("ttf");
+    src: url("Asset/Fonts/Milchella-Regular.ttf") format("truetype");
 }
 
 /* General Reset */
