--- a/Index/Asset & Environment Modeling.css
+++ b/Index/Asset & Environment Modeling.css
@@ -25,9 +25,8 @@
 /*Milchella Font*/
 @font-face {
     font-family: "Milchella";
-    src: url(Asset\Fonts\Milchella-Regular.ttf) format("ttf");
+    src: url("Asset/Fonts/Milchella-Regular.ttf") format("truetype");
 }
-
 
 /* General Reset */
 * {
