--- a/Index/Logo & Brand Identity-Style.css
+++ b/Index/Logo & Brand Identity-Style.css
@@ -22,6 +22,12 @@
   font-style: normal;
 }
 
+/* Milchella Font */
+@font-face {
+  font-family: "Milchella";
+  src: url("Asset/Fonts/Milchella-Regular.ttf") format("truetype");
+}
+
 /* General Reset */
 * {
   margin: 0;
