--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ body {
     text-transform: uppercase;
     position: absolute;
     left: 50px;
+    text-decoration: none;
 }
 
 /* NAV LINKS (Desktop: Right) */
