--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ body {
   align-items: center;
   padding: 25px 40px;
   border-bottom: 1px solid #ffffff;
+  text-decoration: none;
 }
 
 /* LOGO (Desktop: Left) */
