--- a/Index/Asset & Environment Modeling.css
+++ b/Index/Asset & Environment Modeling.css
@@ -7,8 +7,8 @@
 /* Romie Font */
 @font-face {
   font-family: "Romie";
-  src: url("D:/Website/Website 02/Asset/Fonts/romie-regular.woff2") format("woff2"),
-       url("D:/Website/Website 02/Asset/Fonts/romie-regular.woff2") format("woff");
+  src: url("Asset/Fonts/romie-regular.woff2") format("woff2"),
+       url("Asset/Fonts/romie-regular.woff2") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -25,8 +25,15 @@
 /*Milchella Font*/
 @font-face {
     font-family: "Milchella";
-    src: url("Asset/Fonts/Milchella-Regular.ttf") format("truetype");
+    src: url("../Asset/Fonts/Milchella-Regular.woff2") format("woff2");
 }
+
+
+@font-face {
+    font-family: Romie-Regular;
+    src: url("../Asset/Fonts/romie-regular.woff2") format("woff")
+}
+
 
 /* General Reset */
 * {
