--- a/Index/Logo & Brand Identity-Style.css
+++ b/Index/Logo & Brand Identity-Style.css
@@ -7,8 +7,8 @@
 /* Romie Font */
 @font-face {
   font-family: "Romie";
-  src: url("D:/Website/Website 02/Asset/Fonts/romie-regular.woff2") format("woff2"),
-       url("D:/Website/Website 02/Asset/Fonts/romie-regular.woff2") format("woff");
+  src: url("../Asset/Fonts/romie-regular.woff2") format("woff2"),
+       url("../Asset/Fonts/romie-regular.woff2") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -22,12 +22,12 @@
   font-style: normal;
 }
 
-/* Milchella Font */
-@font-face {
-  font-family: "Milchella";
-  src: url("Asset/Fonts/Milchella-Regular.ttf") format("truetype");
-}
 
+/*Milchella Font*/
+@font-face {
+    font-family: "Milchella";
+    src: url("../Asset/Fonts/Milchella-Regular.woff2") format("woff2");
+}
 /* General Reset */
 * {
   margin: 0;
@@ -87,10 +87,10 @@ body {
 
 /* LOGO (Desktop: Left) */
 .logo {
-    font-family: 'romie', sans-serif;
+    font-family: 'Milchella', sans-serif;
     font-weight: 900;
     letter-spacing: 0.5cap;
-    font-size: 18px;
+    font-size: 22px;
     color: #333;;
     text-transform: uppercase;
     position: absolute;
@@ -106,6 +106,10 @@ body {
   padding: 0;
   position: absolute;
   right: 50px;
+}
+
+a{
+    text-decoration: none;
 }
 
 .nav-links li {
