--- a/Index/Logo & Brand Identity-Style.css
+++ b/Index/Logo & Brand Identity-Style.css
@@ -7,8 +7,8 @@
 /* Romie Font */
 @font-face {
   font-family: "Romie";
-  src: url("../Asset/Fonts/romie-regular.woff2") format("woff2"),
-       url("../Asset/Fonts/romie-regular.woff2") format("woff");
+  src: url("Asset/Fonts/romie-regular.woff2") format("woff2"),
+       url("Asset/Fonts/romie-regular.woff2") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -22,11 +22,16 @@
   font-style: normal;
 }
 
-
 /*Milchella Font*/
 @font-face {
     font-family: "Milchella";
     src: url("../Asset/Fonts/Milchella-Regular.woff2") format("woff2");
+}
+
+
+@font-face {
+    font-family: Romie-Regular;
+    src: url("../Asset/Fonts/romie-regular.woff2") format("woff")
 }
 /* General Reset */
 * {
@@ -106,10 +111,6 @@ body {
   padding: 0;
   position: absolute;
   right: 50px;
-}
-
-a{
-    text-decoration: none;
 }
 
 .nav-links li {
